<resources>
    <string name="app_name">Financie.me</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="home">Home</string>
    <string name="transicoes">Transações</string>
    <string name="operacoes">Operações</string>
    <string name="debitos">Debitos</string>
    <string name="Politicaprivacidade">Politica de privacidade</string>
    <string name="suporte">Suporte</string>
    <string name="sobre">Sobre</string>
    <string name="aprender">Aprender</string>
    <string name="receitas">Receitas</string>
    <string name="bem_vindo">Acreditamos que o gerenciamento financeiro pessoal deve ser fácil e acessível para todos. Por isso,
        nosso aplicativo oferece uma variedade de recursos para ajudar os usuários a monitorar suas despesas,
        planejar seus orçamentos e acompanhar seus investimentos. Esperamos que você aproveite nosso aplicativo e se beneficie de suas funcionalidades.
        Se tiver alguma dúvida ou feedback, não hesite em nos contatar.</string>


    <string-array name="categorias_despesas">
        <item>Alimentação</item>
        <item>Transporte</item>
        <item>Habitação</item>
        <item>Saúde</item>
        <item>Educação</item>
        <item>Entretenimento</item>
        <item>Viagens</item>
        <item>Compras</item>
        <item>Serviços financeiros</item>
        <item>Doações/Caridade</item>
        <item>Vestuário</item>
        <item>Eletrônicos</item>
        <item>Cuidados pessoais</item>
        <item>Impostos</item>
        <item>Seguros</item>
        <item>Animais de estimação</item>
        <item>Presentes</item>
        <item>Investimentos</item>
        <item>Despesas domésticas</item>
        Empréstimos
    </string-array>

    <string-array name="categorias_receitas">
        <item>Salário</item>
        <item>Rendimentos de investimentos</item>
        <item>Lucros de negócios</item>
        <item>Aluguel de propriedades</item>
        <item>Comissões de vendas</item>
        <item>Honorários profissionais</item>
        <item>Rendas de royalties</item>
        <item>Receitas de publicidade</item>
        <item>Dividendos de ações</item>
        <item>Ganhos de jogos e apostas</item>
        <item>Prêmios de loteria</item>
        <item>Receitas de crowdfunding</item>
        <item>Vendas de bens usados</item>
        <item>Pagamentos de patrocínio</item>
        <item>Receitas de aluguel de equipamentos</item>
        <item>Receitas de serviços de consultoria</item>
        <item>Remuneração por serviços de marketing afiliado</item>
        <item>Ganhos por meio de programas de afiliados de empresas</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_gerir_contas">GerirContasActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>