<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/ic_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item android:id="@+id/ic_transicoes"
        android:icon="@drawable/ic_transacoes"
        android:title="@string/transicoes" />
    <item android:id="@+id/ic_add"
        android:icon="@drawable/ic_add_c"
        android:title="@string/operacoes" />

    <item android:id="@+id/ic_debitos"
        android:icon="@drawable/ic_debitos"
        android:title="@string/debitos" />
    <item android:id="@+id/ic_aprender"
        android:icon="@drawable/ic_aprenda"
        android:title="@string/aprender" />

</menu>